--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "themes-go-acme",
-    "displayName": "Acme, Go Playground Themes",
+    "name": "kodoroki-acme",
+    "displayName": "Kodoroki Acme",
     "description": "Acme Theme, Go Playground Theme, Go Source Theme. Themes that mimics acme, go playground (play.golang.org) and go source (golang.org/src/)",
     "version": "0.0.5",
     "license": "MIT",
-    "publisher": "aaqaishtyaq",
+    "publisher": "trickster",
     "engines": {
         "vscode": "^1.43.0"
     },
@@ -64,7 +64,7 @@
         "dev": "nodemon --watch src -e ts --exec \"esno src/index.ts\"",
         "vscode:prepublish": "npm run build",
         "lint": "eslint .",
-        "package": "mkdir -p build; vsce package -o ./build/themes-go-acme-vscode.vsix",
+        "package": "mkdir -p build; vsce package -o ./build/kodoroki-acme.vsix",
         "release": "npm run build && npx bumpp --commit --tag --push --all && vsce publish --no-dependencies"
     },
     "devDependencies": {
